# project-agl

./: .gitignore  BRIEF.md  DECISIONS.md  PLAN.md  PRODUCT_REVIEW.md  README.md  REVIEW.md  SCRATCHPAD.md
backend/: eval_artifact.json  pyproject.toml
backend/agl/: agent.py  api.py  engine.py  eval.py  grounding.py  guard.py  learning.py  models.py  observability.py  reconcile.py  repository.py
backend/docs/: DESIGN.md
backend/scripts/: build_seeds.py  run_eval.py
backend/seeds/: accounts.json  bills.json  corrections.json  customers.json  ground_truth.json  invoices.json  provided_matches.json  transactions.json
backend/tests/: conftest.py  test_agent.py  test_console.py  test_engine.py  test_eval.py  test_guard.py  test_learning.py  test_reconcile.py  test_reference.py  test_repository.py  test_run_eval.py
backend/ui/: README.md  accounts.json  app.js  index.html  style.css  transactions.json
data/: cast_and_documents.md  chart_of_accounts.md  corrections.md  matches.md  transactions.md
deliverables/: ARCHITECTURE.md  ASSUMPTIONS_AND_TIMELINE.md  DECK.md  deck.html
docs/: PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AccountPicker.tsx  ActionBar.tsx  AddAccountForm.tsx  AuditTrail.tsx  Categorization.tsx  ClientHeader.tsx  DecisionCard.tsx  DocumentDetail.tsx  Evidence.tsx  MatchPicker.tsx  MetricBar.tsx  QueuePanel.tsx  QueueRow.tsx  Reconciliation.tsx  RunControl.tsx  TransactionSummary.tsx
(+12 files in other folders)
